Fix: Require ClickHouse credentials via environment variables (QU-2404)
This PR fixes insecure credential management in ClickHouse persistence configuration by removing hardcoded default credentials and requiring them to be set via environment variables.

GitOrigin-RevId: 56c4edd52fde02b9449563114de1b185189e52bf